--- a/forecasts/forecast-agro.qmd
+++ b/forecasts/forecast-agro.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: август 2024 г.
+## Результаты опроса: ноябрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -38,7 +38,7 @@ df %>%
 \*Актуальные даные и скрытые значения доступны по [подписке](../subscribe.qmd).
 В скобках указаны значения предыдущего опроса
 
-\*\*Текущий сезон 2024/2025, следующий сезон 2025/2026. В остальных случаях текущий сезон 2023/2024, следующий сезон 2024/2025
+\*\*Текущий сезон 2024/2025, следующий сезон 2025/2026
 
 1) Здесь и далее данные без учета статистической инфорации по Донецкой Народной Республике (ДНР), Луганской народной Республике (ЛНР), Запорожской и Херсонской областям; в весе после доработки
 2) Фактические данные по экспорту - оценка компании ПроЗерно
@@ -47,9 +47,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Ожидаемо снизился консенсус по начавшемуся сезону зерновых, но неожиданно выше оказались оценки по валовому сбору масличных в 2024 г. По подсолнечнику ожидания ухудшились относительно опроса в мае, однако по рапсу и сое солидный рост. Это отражает тенденцию на уход аграриев от традиционных культур в пользу тех, где сохраняется маржинальность.
+Аналитики прожолжают снижать оценки текущего года по зерновым и масличным культурам, за исключением рапса. Оценки по следующему сельхозгоду выросли.
 
-Рынку не хватает информации о базовых показателях баланса - разброс мнений аналитиков относительно экспорта подсолнечного малса в сезоне, который завершится в текущем месяце - от 4,4 до 5,4 млн тонн, т.е. 23%!
+Ожидания по экспорту пшеницы выросли в среднем на 1,6 млн т в текущем и следующем сезоне.
+
+Аналитики рынка начали давать первые оценки урожая зерновых и пшеницы в регионах ДНР, ЛНР, Запорожской и Херсонской областях. В текущем году урожай зерна в них оценивается в среднем в 3,4 млн т, пшеницы - в 2,6 млн т. 
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -97,12 +99,12 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 8 профессиональных аналитиков, 4 из них дали согласие на раскрытие информации об их участии в опросе:
+В опросе приняли участие 7 профессиональных аналитиков, 3 из них дали согласие на раскрытие информации об их участии в опросе:
 
 | <!-- --> | <!-- --> | <!-- --> |
 |------------------------|--------------------------|----------------------|
-| Павенский Игорь (Русагротранс) | Петриченко Владимир (ПроЗерно) | Снитко Дарья (Газпромбанк) |
-| Тюрина Елена (Российский зерновой союз) | *4 участника не подтвердили согласие на раскрытие данных* |  |
+| Павенский Игорь (Русагротранс) | Петриченко Владимир (ПроЗерно) | Варыгина Лилия (Oleoscope) |
+|  | *4 участника не подтвердили согласие на раскрытие данных* |  |
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
