--- a/forecasts/forecast-gas.qmd
+++ b/forecasts/forecast-gas.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: сентябрь 2024 г.
+## Результаты опроса: декабрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -43,11 +43,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Аномальная жара летом в России привела к пересмотру аналитиками прогноза по добыче газа в России в 2024 г. вверх.
+Высокий рост потребления газа в России в 2-3 кв. и увеличение экспорта трубопроводного газа привели к очередному пересмотру вверх оценки добычи голубого топлива в 2024 г.
 
-Лишь 2 аналитика предполагают, что экспорт российского трубопроводного газа в 2025 г. снизится относительно 2024 г., т.е. считают, что транзит российского газа через Украину прекратится либо сильно упадет.
+Аналитики существенно пересмотрели ожидания по динамике цены на газ TTF из-за возможного сокращения импорта российского газа и высокого отбора из ПХГ ЕС в начале отопительного сезона 2024-2025 гг. Прогноз по динамике цены JKM в Азии был пересмотрен незначительно.
 
-Большинство аналитиков сейчас уверены, что в 2025-2026 гг. азиатская премия на рынке укрепится. Это говорит о низких ожиданиях возобновления потребления газа в Европе в краткосрочной перспективе.
+Ожидания по экспорту российского СПГ были вновь снижены из-за отсутствия новых танкеров ледового класса.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -95,12 +95,13 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 7 профессиональных аналитиков, 5 из них дали согласие на раскрытие информации об их участии в опросе:
+В опросе приняли участие 8 профессиональных аналитиков, 6 из них дали согласие на раскрытие информации об их участии в опросе:
 
 | <!-- --> | <!-- --> | <!-- --> |
 |------------------------|--------------------------|----------------------|
-| Белогорьев Алексей (Институт энергетики и финансов) | Клепач Андрей (ВЭБ.РФ) | Суханов Геннадий (Sber CIB) |
-| Кауфман Сергей (Финам) | Пугач Вадим (Газпромбанк) | *2 участника не подтвердили согласие на раскрытие данных* |
+| Белова Мария (Имплемента) | Белогорьев Алексей (Институт энергетики и финансов) | Кауфман Сергей (Финам) |
+| Клепач Андрей (ВЭБ.РФ) | Крылова Екатерина (Промсвязьбанк) | Пугач Вадим (Газпромбанк) |
+|  | *2 участника не подтвердили согласие на раскрытие данных* |  |
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
