--- a/index.qmd
+++ b/index.qmd
@@ -7,9 +7,13 @@ format:
       sidebar-width: 350px
 ---
 
-::::::: grid
+::: grid
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Актуальное
+
+4 декабря 2024. Сырьевой индекс ЦЦИ. **Экспортные цены нажали на газ**
+
+[Мониторинг ноябрь →](pdf/2024-11-cci-index.pdf)
 
 8 ноября 2024. Сырьевой индекс ЦЦИ. **Монетарные стимулы не видны в ценах реального рынка**
 
@@ -39,39 +43,35 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
-**25.11.2024 Пшеница**
+**23.12.2024 Пшеница**
 
-Экспортные цены на пшеницу остались на уровне прошлой недели. Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т. 
-Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т. 
-
-[Подробнее →](markets/markets-wheat.qmd)
-
-**20.11.2024 Нефть**
-
-По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals и ESPO снизилась более чем на 3% н/н. 
-Дисконт на ESPO FOB Kozmino сузился более чем на 6% н/н и обновил минимальное значение за текущий год. Морской экспорт российской нефти за отчетную неделю уменьшился на 23% н/н на фоне выхода с ремонтных работ ряда нефтеперерабатывающих заводов.
-
-[Подробнее →](markets/markets-oil.qmd)
-
-**18.11.2024 Пшеница**
-
-Экспортные цены на пшеницу за неделю снизились на 1 долл. По прогнозам экспертов аграрного рынка квота на экспорт зерна из России в 2025 г. может упасть до 10-12 млн т. Аналитики FranceAgriMer снизили  оценку экспорта мягкой пшеницы из Франции за пределы ЕС в 2024/25 г. на 0,1 млн т до 3,9 млн т. 
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с прошлой неделей. Правительство РФ утвердило квоту на экспорт пшеницы в 2025 г. в размере 10,6 млн т, на 400 тыс. т ниже ранее одобренного таможенной подкомиссией объема. По прогнозам агентства FranceAgriMer экспорт французской мягкой пшеницы в 2024/25 г. упадет до 3,5 млн т, минимума с начала XXI в.
 
 [Подробнее →](markets/markets-wheat.qmd)
 
-**18.11.2024 Азотные удобрения**
+**23.12.2024 Азотные удобрения**
 
-Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка.
-За пределами Индии мировой спрос на карбамид остается низким. 
+Результаты индийского тендера еще не опубликованы, но цены уже растут на всех направлениях.
 
 [Подробнее →](markets/markets-fertilizers.qmd)
 
-**15.11.2024 Сухопутная контейнерная логистика**
+**18.12.2024 Нефть**
 
-Ставки на прямые железнодорожные маршруты из Китая в Россию снизились в ноябре в среднем на 5%. В мультимодальном сообщении стоимость морского фрахта сохраняет тенденцию к продлению, а железнодорожного плеча – к росту.
+По итогам предыдущей недели стоимость российской нефти варьировалась в зависимости от сорта и базиса поставки. Дельта изменения находится в пределах от -1% до +1%. Дисконт на ESPO FOB Kozmino сузился более чем на 10% на фоне роста спроса в Китае. Морской экспорт российской нефти за отчетную неделю увеличился более чем на 7% н/н.
+
+[Подробнее →](markets/markets-oil.qmd)
+
+**16.12.2024 Сухопутная контейнерная логистика**
+
+Несмотря на индексацию грузового железнодорожного тарифа, ставки на перевозку контейнерных грузов по наиболее востребованным внутрироссийским маршрутам снизились. Ставки на прямые контейнерные поезда из Китая в Россию не показали в декабре заметной динамики, однако стоимость ж.-д. плеча на мультимодальных маршрутах через порты Дальнего Востока продолжает расти уже шестой месяц подряд.
 
 [Подробнее →](markets/markets-railways.qmd)
 
+**02.12.2024 Уголь**
+
+Цены на энергетический уголь продолжают медленно спускаться вниз, однако надежда на умеренное восстановление в зимний период остается. Индекс ЦЦИ на уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 2,1%. Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 142-144 долл./т CFR South China, на коксующийся уголь ГЖ – 140 долл./т CFR China.
+
+[Подробнее →](markets/markets-coal.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -168,7 +168,7 @@ index_plot <- highchart() %>%
    hc_xAxis(type = "datetime") %>%
    hc_exporting(enabled = TRUE) %>%
    hc_yAxis_multiples(
-      list(title = list(text = "Индекс сырьевых цен ЦЦИ, янв. 2022 = 100"), showFirstLabel = TRUE, max = 150, showLastLabel=TRUE, opposite= FALSE),
+      list(title = list(text = "Индекс сырьевых цен ЦЦИ, янв. 2022 = 100"), showFirstLabel = TRUE, max = 180, showLastLabel=TRUE, opposite= FALSE),
       list(title = list(text = "USD/RUB, рублей за доллар"), showLastLabel = FALSE, opposite = TRUE, reversed = TRUE)) %>%
    hc_add_series(df_index,type="line", hcaes(x = date, y = value, group=index), color = colors[1]) %>%
    hc_add_series(df_noil_index,type="line", hcaes(x = date, y = value, group=index), color = colors[3], visible = TRUE) %>%
@@ -185,4 +185,4 @@ index_plot
 
 ```
 :::
-:::::::
+:::
