--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -11,42 +11,56 @@ format:
 
 # ![](../images/icon-coal.svg) Уголь {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*05.11.2024* Уголь
+*02.12.2024* Уголь
 
-**На рынке наблюдается относительная стабильность**
+**Цены на уголь дрейфуют вниз**
 
-Уголь марки PCI из России поставляется в ограниченном количестве, и на рынке уже несколько недель ощущается его дефицит. Перевозка энергетических углей в Китай остаётся невыгодной. С каждым днём цены на энергетический уголь снижаются на 1-2 юаня. Уголь марки ГЖ остаётся в прежней ценовой категории и демонстрирует стабильность. Тем не менее, энергетические угли пользуются хорошим спросом на рынке Южной Кореи, даже по более высоким ценам.
+Цены на энергетический уголь продолжают медленно спускаться вниз, однако надежда на умеренное восстановление в зимний период остается. Индекс ЦЦИ на уголь калорийностью 6000 ккал/кг на базисе FOB Дальний Восток снизился за неделю на 2,1%. 
 
-- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 156 – 157 долл./т CFR Vietnam, 137 – 140 CFR China
-- Рассматриваемый уровень цен на энергетический уголь 6000 FOB Дальний восток в Южную Корею: 105-110 долл./т
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 142-144 долл./т CFR South China.
+- Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 140 долл./т CFR China.   
 
-*28.10.2024* Уголь
+*25.11.2024* Уголь
 
-**Рыночные цены опять под давлением**
+**Цены на уголь продолжают находиться под давлением**
 
-На рынке Китая наблюдается низкая торговая активность. Ограниченный спрос на уголь и накопленные высокие запасы на складах снова оказывают давление на  угольные цены. На западном направлении наблюдаются сбои экспортных поставок российского угля.
+Стоимость энергетического угля по-прежнему не находит поддержки, несмотря на приближение зимнего периода. Рост экспорта китайской стали на рынок Индии ограничивает необходимость увеличивать загрузку индийских сталелитейных мощностей и сдерживает спрос на металлургический уголь.
 
- - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 150 – 152 долл./т CFR Indonesia, предложение покупателей на рынке КНР – 135 долл./т СFR China, предложение продавцов – 140 долл./т СFR China и выше.
- - Рассматриваемый уровень цен на марку ГЖ на рынке КНР: предложение покупателей – 140 долл./т СFR China, предложение продавцов – 150 долл./т СFR China.
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 155 долл./т CFR Indonesia, 144-145 долл./т CFR China.
+-   Рассматриваемый уровень цен на коксующийся уголь: ГЖ – 135-143 долл./т CFR China, марка Ж – 145 долл./т CFR China.\
+-   Рассматриваемый уровень цен на энергетический уголь 6000 ккал/кг FOB Дальний восток в Южную Корею: 105-110 долл./т
 
 ![](../images/icon-locker.svg){width="6%"}
 
 [Подробнее](../demo-subscription.qmd)
 
-*21.10.2024* Уголь
+*18.11.2024* Уголь
 
-**Рыночные настроения начали охлаждаться**
+**Давление на уголь со всех сторон**
 
-Профицит предложения энергетического угля привел к возвращению цен ниже уровня 100 долл./т на уголь 6000 ккал/кг на базисе FOB порты Дальнего Востока.
+Тёплая погода, высокие запасы угля и повышенный уровень гидрогенерации в Индии, оказывает давление на цены на уголь. В Турции наблюдается высокая активность на рынке спот из-за проблем с поставками российского угля. На рынке КНР большое количество накопленного угля не приносит оживления на рынок несмотря на начало отопительного сезона.
 
-- Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 136-145 долл./т СFR China.
-- Рассматриваемый уровень цен на марку ГЖ: 155 долл./т СFR China.
+-   Рассматриваемый уровень цен на марку ГЖ CFR China: 132 - 140 долл./т
+-   Рассматриваемый уровень цен на энергетический уголь 6000 FOB Дальний восток в Южную Корею: 105-110 долл./т
+
+![](../images/icon-locker.svg){width="6%"}
+
+[Подробнее](../demo-subscription.qmd)
+
+*11.11.2024* Уголь
+
+**Цены на уголь падают из-за слабого спроса**
+
+Высокие запасы энергетического угля на рынке Китая ежедневно давят на российские цены. Строительные и металлургические заводы Китая продолжают простаивать, что приводит к постоянному снижению спроса на металлургические угли и снижению цен:
+
+-   Рассматриваемый уровень цен на марку ГЖ CFR China: 132 долл./т
+-   Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV) CIF Indonesia: 156 долл./т
 
 ![](../images/icon-locker.svg){width="6%"}
 
