--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -11,35 +11,35 @@ format:
 
 # ![](../images/icon-chemicals.svg) Химия {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+*23.12.2024 Азотные удобрения*
 
-*18.11.2024 Азотные удобрения*
+**Тендер нагнетает цены**
 
-**Один в поле не воин**
-
-Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка. За пределами Индии мировой спрос на карбамид остается низким.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*11.11.2024 Азотные удобрения*
-
-**Разворот цен на карбамид**
-
-За пределами Индии фиксируется низкая рыночная активность.
+Результаты индийского тендера еще не опубликованы, но цены уже растут на всех направлениях.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*02.11.2024 Азотные удобрения*
+*16.12.2024 Азотные удобрения*
 
-**Индия не выпадает из фокуса**
+**Цены на карбамид пошли вверх**
 
-Indian Potash Limited 29 октября объявила новый тендер на закупку карбамида.
+Индийская компания NFL объявила тендер на закупку карбамида, результаты которого будут опубликованы после 19 декабря. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*09.12.2024 Азотные удобрения*
+
+**Индия вновь подогревает спрос**
+
+Индия планирует вернуться с новым тендером на закупку карбамида в декабре. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
