--- a/markets/markets-railways-van.qmd
+++ b/markets/markets-railways-van.qmd
@@ -11,11 +11,24 @@ format:
 
 # ![](../images/icon-trolley.svg) Сухопутная логистика. Полувагоны {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
-::::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*29.11.2024*
+
+**На сети началась борьба с «лишними» полувагонами**
+
+-   На фоне снижения погрузки на сети РЖД избыточный рабочий парк полувагонов оценивается в 86,5 тыс. ед. Участники рынка отмечают резкое снижение спроса на полувагоны как на первичном, так и на вторичном (арендном) рынке
+
+-   Опубликован Приказ ФАС об индексации тарифов РЖД на 13,8% с 1 декабря 2024 г. Ранее ожидаемое решение о дополнительной индексации порожнего пробега полувагонов на 10% с 1 января 2025 г. не принято.
+
+-   Ставки предоставления полувагонов остаются стабильными до момента индексации железнодорожных тарифов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 
 *31.10.2024*
 
@@ -79,4 +92,4 @@ hc
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
 :::
-:::::::
+:::
