--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -11,11 +11,21 @@ format:
 
 # ![](../images/icon-barcode.svg) Сухопутная контейнерная логистика {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*16.12.2024*
+
+**Контейнерный рынок играет по своим правилам**
+
+-   Несмотря на индексацию грузового железнодорожного тарифа, ставки на перевозку контейнерных грузов по наиболее востребованным внутрироссийским маршрутам снизились. Ставки на прямые контейнерные поезда из Китая в Россию не показали в декабре заметной динамики, однако стоимость ж.-д. плеча на мультимодальных маршрутах через порты Дальнего Востока продолжает расти уже шестой месяц подряд.
+-   Железная дорога рассинхронизировалась с портами: перевозки контейнеров по сети РЖД снизились в ноябре на 1,4% г/г, а контейнерооборот морских портов России вырос на 31% г/г и установил исторический рекорд.
+-   На сети РЖД вводятся новые конвенционные ограничения на погрузку контейнеров назначением на станции Подмосковья. Столичные терминалы не справляются с приёмом контейнерных поездов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *15.11.2024*
 
@@ -36,8 +46,6 @@ format:
 -   Темпы прироста контейнерных перевозок по сети РЖД снизились в сентябре до +1,9% г/г. На железной дороге фиксируются массовые отставления поездов от движения, сохраняются проблемы вывоза контейнеров из дальневосточных портов и с сухопутных пограничных переходов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
