--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -11,56 +11,57 @@ format:
 
 # ![](../images/icon-wheat.svg) Рынок зерна {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*23.12.2024 Пшеница*
+
+**Французский экспорт пшеницы упадет до минимума с начала века**
+
+Экспортные цены на пшеницу выросли на 4 долл. по сравнению с прошлой неделей. 
+
+Правительство РФ утвердило квоту на экспорт пшеницы в 2025 г. в размере 10,6 млн т, на 400 тыс. т ниже ранее одобренного таможенной подкомиссией объема.
+
+По прогнозам агентства FranceAgriMer экспорт французской мягкой пшеницы в 2024/25 г. упадет до 3,5 млн т, минимума с начала XXI в.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*16.12.2024 Пшеница*
+
+**Алжир откажется от импорта твердой пшеницы**
+
+Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей.
+
+Алжир в 2025 г. вводит полный запрет на импорт твердой пшеницы для поддержки собственного производства.
+
+Саудовская Аравия на тендере GFSA закупила 804 тыс. т мукомольной пшеницы по ценам 263-280 долл./т CNF с поставкой в феврале-апреле 2025 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*09.12.2024 Пшеница*
+
+**Mostakbal Misr заменит GASC в закупках пшеницы**
+
+Экспортные цены на пшеницу выросли на 1 долл. по сравнению с прошлой неделей.
+
+Reuters пишет, что Египет передает полномочия по импорту продовольствия, ранее принадлежавшие GASC, агентству Mostakbal Misr.
+
+Экспортная пошлина на пшеницу в РФ, которая будет действовать с 11 декабря 2024 г., вырастет на 32% до 4 872 руб. из-за ослабления рубля.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *25.11.2024 Пшеница*
 
 **Зимбабве собирает рекордный урожай пшеницы, Иордания – импортирует про запас**
 
-Экспортные цены на пшеницу остались на уровне прошлой недели. 
+Экспортные цены на пшеницу остались на уровне прошлой недели.
 
-Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т. 
+Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т.
 
-Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-
-*18.11.2024 Пшеница*
-
-**Прогноз производства пшеницы во Франции повышен, экспорта – снижен**
-
-Экспортные цены на пшеницу за неделю снизились на 1 долл.
-
-По прогнозам экспертов аграрного рынка квота на экспорт зерна из России в 2025 г. может упасть до 10-12 млн т. 
-
-Аналитики FranceAgriMer снизили  оценку экспорта мягкой пшеницы из Франции за пределы ЕС в 2024/25 г. на 0,1 млн т до 3,9 млн т. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*11.11.2024 Пшеница*
-
-**Мировое производство пшеницы прирастет Казахстаном**
-
-Экспортные цены на пшеницу за неделю снизились на 2 долл.
-
-Еврокомиссия планирует разобраться с дискриминацией французской пшеницы на алжирских тендерах.
-
-USDA повысило прогноз производство пшеницы в Казахстане на 2 млн т до 18 млн т в 2024/25 г. 
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*05.11.2024 Пшеница*
-
-**Слабый спрос снижает экспортные цены на пшеницу**
-
-Экспортные цены на пшеницу за неделю снизились на 5 долл.
-
-Китай в 2024 г. ожидает рекордный урожай зерна  - более 700 млн т.
+Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
