--- a/methodology/specs-coal.qmd
+++ b/methodology/specs-coal.qmd
@@ -8,12 +8,14 @@ fig-format: svg
 
 ![](../images/icon-coal.svg)
 
+Содержание Коксующийся уголь: экспорт Энергетический уголь: экспорт Коксующийся уголь: внутренний рынок
+
 ### Коксующийся уголь: экспорт
 
 Продукт и его характеристики
 
 +---------------------------------+--------------------------------------------+
-| Параметры                       | Характеристика                             |
+| Продукт                         | Характеристика                             |
 +=================================+============================================+
 | Russian Standard LV Low Sulfu   | Зольность не более 11%, Ro - 1-1,69,       |
 |                                 |                                            |
@@ -46,57 +48,57 @@ fig-format: svg
 
 Базис
 
-Цены на коксующийся уголь оцениваются еженедельно на базисах: 
+Цены на коксующийся уголь оцениваются еженедельно на базисах:
 
-- FOB Far East (Восточный, Ванино, Владивосток); 
-- FOB Black Sea (Тамань); 
-- FOB Baltic (Усть-Луга, Мурманск).
+-   FOB Far East (Восточный, Ванино, Владивосток);
+-   FOB Black Sea (Тамань);
+-   FOB Baltic (Усть-Луга, Мурманск).
 
-Объем партии. 
+Объем партии
 
-Стандартный объем партии - не менее 1000 тонн.
+Стандартный объем партии - не менее 20 тыс. тонн.
 
-Валюта и единица измерения. 
+Сроки поставки
+
+До 31 дня.
+
+Валюта и единица измерения.
 
 Долл./тонн.
 
-Сроки проведения опроса. 
+Условия оплаты
+
+Определяются индивидуально сторонами сделки.
+
+Сроки проведения опроса.
 
 Еженедельно, кроме официальных государственных праздников и выходных дней.
 
 ### Энергетический уголь: экспорт
 
-+---------------------------+------------------+-----------+-----------+-----------+
-| Продукт                   | Калорийность     | Сера      | Зола      | Влага     |
-+===========================+==================+===========+===========+===========+
-| Russian Steam coal (6000) |                  |           |           |           |
-+---------------------------+------------------+-----------+-----------+-----------+
-| FOB Far East              | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15     | 8-20      |
-+---------------------------+------------------+-----------+-----------+-----------+
-| Russian Steam coal (5500) |                  |           |           |           |
-+---------------------------+------------------+-----------+-----------+-----------+
-| FOB Far East              | 5500 NAR ккал/кг | 0,3 - 0,6 | 10-15     | 8-20      |
-+---------------------------+------------------+-----------+-----------+-----------+
-| Russian Steam coal (5000) |                  |           |           |           |
-+---------------------------+------------------+-----------+-----------+-----------+
-| FOB Far East              | 5000 NAR ккал/кг | 0,3 - 0,6 | 10-15     | 8-20      |
-+---------------------------+------------------+-----------+-----------+-----------+
-| Russian Steam coal (6000) |                  |           |           |           |
-+---------------------------+------------------+-----------+-----------+-----------+
-| FOB Taman                 | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15     | 8-20      |
-+---------------------------+------------------+-----------+-----------+-----------+
-| Russian Steam coal (6000) |                  |           |           |           |
-+---------------------------+------------------+-----------+-----------+-----------+
-| FOB Baltic                | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15     | 8-20      |
-+---------------------------+------------------+-----------+-----------+-----------+
+Продукты и его характеристики
 
-: Продукт и его характеристики
+| Продукт                   | Калорийность     | Сера      | Зола  | Влага |
+|---------------------------|------------------|-----------|-------|-------|
+| Russian Steam coal (6000) |                  |           |       |       |
+| FOB Far East              | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
+| Russian Steam coal (5500) |                  |           |       |       |
+| FOB Far East              | 5500 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
+| Russian Steam coal (5500) |                  |           |       |       |
+| CFR China                 | 5500 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
+| Russian Steam coal (5000) |                  |           |       |       |
+| FOB Far East              | 5000 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
+| Russian Steam coal (6000) |                  |           |       |       |
+| FOB Taman                 | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
+| Russian Steam coal (6000) |                  |           |       |       |
+| FOB Baltic                | 6000 NAR ккал/кг | 0,3 - 0,6 | 10-15 | 8-20  |
 
 Базис
 
 Цены на энергетический уголь оцениваются еженедельно на базисах:
 
 -   FOB Far East (порты Дальнего Востока: Восточный, Ванино, Владивосток);
+-   CFR China на уголь калорийностью 5500 ккал/кг;
 -   FOB Black Sea (Тамань);
 -   FOB Baltic (Усть-Луга, Мурманск).
 
@@ -104,9 +106,17 @@ fig-format: svg
 
 Стандартный объем партии - не менее 20-40 тыс. тонн.
 
+Сроки поставки
+
+До 31 дня.
+
 Валюта и единица измерения
 
 Долл./тонн.
+
+Условия оплаты
+
+Определяются индивидуально сторонами сделки.
 
 Сроки проведения опроса
 
@@ -114,21 +124,16 @@ fig-format: svg
 
 ### Коксующийся уголь: внутренний рынок
 
-+-----------------+--------------------------------------------------------+
-| Параметры       | Характеристика                                         |
-+=================+========================================================+
-| Марка К         | Ro - 1-1,69, VM - 24-28%, Y - 13-17 мм; Сера - ≤0,8%.  |
-+-----------------+--------------------------------------------------------+
-| Марка Ж         | Ro - 0,8-1,19, VM ≥28%, Y - 14-26 мм; Сера - ≤0,8%.    |
-+-----------------+--------------------------------------------------------+
-| Марка ОС        | Ro \>1,3, VM \<22%, Y – 6-12 мм; Сера - ≤0,8%.         |
-+-----------------+--------------------------------------------------------+
-| Марка КО        | Ro - 0,8-1,39, VM – 16-30%, Y - 10-12 мм; Сера -≤0,8%. |
-+-----------------+--------------------------------------------------------+
-| Марка КС        | Ro - 1,1-1,69, VM \<30%, Y - 6-9 мм; Сера - ≤0,8%.     |
-+-----------------+--------------------------------------------------------+
-| Марка ГЖ        | Ro - 0,5-0,99, VM \>30%, Y - 17-26 мм; Сера - ≤0,8%.   |
-+-----------------+--------------------------------------------------------+
+Продукты и его характеристики
+
+| Продукт  | Характеристика                                         |
+|----------|--------------------------------------------------------|
+| Марка К  | Ro - 1-1,69, VM - 24-28%, Y - 13-17 мм; Сера - ≤0,8%.  |
+| Марка Ж  | Ro - 0,8-1,19, VM ≥28%, Y - 14-26 мм; Сера - ≤0,8%.    |
+| Марка ОС | Ro \>1,3, VM \<22%, Y – 6-12 мм; Сера - ≤0,8%.         |
+| Марка КО | Ro - 0,8-1,39, VM – 16-30%, Y - 10-12 мм; Сера -≤0,8%. |
+| Марка КС | Ro - 1,1-1,69, VM \<30%, Y - 6-9 мм; Сера - ≤0,8%.     |
+| Марка ГЖ | Ro - 0,5-0,99, VM \>30%, Y - 17-26 мм; Сера - ≤0,8%.   |
 
 Базис
 
@@ -140,9 +145,17 @@ fig-format: svg
 
 Стандартный объем партии - не менее 1000 тонн.
 
+Срок поставки
+
+До 3-х месяцев. В 4-м квартале период поставки длится с октября по январь включительно.
+
 Валюта и единица измерения
 
 Руб./тонн.
+
+Условия оплаты
+
+Определяются индивидуально сторонами сделки.
 
 Сроки проведения опроса
 
