--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -113,11 +113,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-0,7 п.]{.my-custom-class style="color:#f6514c;"}** ([**-0,4 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Индекса сырьевых цен ЦЦИ к предыдущей неделе: [-0,3 п.]{.my-custom-class style="color:#f6514c;"}** ([**-1,5 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: трубопроводный газ [**+6,6%**]{.my-custom-class style="color:#44bf78;"}, удобрения [**-4,6%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: трубопроводный газ [**-4,7%**]{.my-custom-class style="color:#f6514c;"}, уголь [**-4,3%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, нефть [**-1,1 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: трубопроводный газ [**-0,4 п.**]{.my-custom-class style="color:#f6514c;"}, уголь [**-0,3 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -197,4 +197,4 @@ discount_plot
 
 ------------------------------------------------------------------------
 
-[Мониторинг - Октябрь 2024](reports/2024-10-cci-index.pdf)
+[Мониторинг - Ноябрь 2024](reports/2024-11-cci-index.pdf)
