--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -1,8 +1,7 @@
 ---
-title: "Демо подписка"
+title: "Демоподписка"
 lang: ru
 toc: false
-sidebar: false
 format:
    html: 
      page-layout: custom
@@ -10,7 +9,7 @@ format:
       body-width: 900px
 ---
 
-## ![](../images/icon-subscription.svg)Демо-подписка {.my-custom-class style="margin-left:3%;"}
+## ![](../images/icon-subscription.svg)Демоподписка {.my-custom-class style="margin-left:3%;"}
 
 Подписка включает регулярно обновляемые данные о ценах в формате Excel и аналитические отчеты.
 
@@ -22,70 +21,70 @@ format:
 
 ### Российский уголь
 
-[Обзор зарубежных рынков угля (ежеквартально)](reports/2024-05%20ЦЦИ_Квартальный_уголь_№2_rus.pdf)
-
-[Цена экспортной альтернативы угля в России (ежеквартально)](reports/Цена экспортной альтернативы угля в России.pdf)
-
-[Экспортные цены на уголь в России (еженедельно)](reports/2024-09-09%20PBC%20Weekly%20Coal.pdf)
-
-[Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
+-	[экспортные цены](reports/2024-09-09 PBC Weekly Coal.pdf) и нетбэки на энергетический и коксующийся уголь (еженедельно) - [аналитика и котировки](reports/2024-09 PBC Quarterly Coal NB.pdf); 
+-	внутренние цены на коксующийся уголь (ежемесячно) - аналитика и котировки; 
+-	ставки ж.д. логистики угля (ежемесячно) - аналитика и котировки;
+-	перевалки угля (раз в полгода) -  аналитика и котировки; 
+-	[нетбэки](reports/2024-09 PBC Quarterly Coal NB.pdf) и анализ топливных затрат в российской электроэнергетике (ежеквартально);
+-	[ставки фрахта на уголь (еженедельно)](reports/2024-09-17 ЦЦИ Фрахт угля.pdf);
+-	[большой ежеквартальный отчет о рынке](reports/2024-05 ЦЦИ_Квартальный_уголь_№2_rus.pdf) и вебинар ([пример вебинаров](https://www.youtube.com/@CCI.Friday)).
+-  Дашборд с историческими рядами (обновляется еженедельно).
 
 ### Российская нефть
 
-[Российский рынок нефти: добыча и экспорт (еженедельно)](reports/2024-10-23%20ЦЦИ%20нефть.pdf)
+-	экспортные цены и дифференциалы на российскую нефть (раз в 2 недели) - аналитика^[Пример отчета предоставляется по запросу – напишите нам [subscribe@pbc-index.ru](mailto:subscribe@pbc-index.ru)] и котировки; 
+-	экспортные цены и дифференциалы на российские нефтепродукты (раз в 2 недели) - аналитика и котировки;
+-	ставки фрахта нефти (еженедельно) - [аналитика и котировки](reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf);
+-	ставки фрахта нефтепродуктов (еженедельно)- [аналитика и котировки](reports/2024-07-17 PBC Weekly OilProduct Freight.pdf);
+-	ставки перевалки нефти (раз в полгода) – аналитика и котировки.
 
-[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-10-23 ЦЦИ бензин.pdf)
-
-[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-10-09 ЦЦИ дизель.pdf)
-
-[Цены и дифференциалы на российскую нефть (раз в 2 недели)](reports/По%20каким%20ценам%20Россия%20продает%20нефть.pdf)
 
 ### Российский газ
 
-[Экспортные цены на газ в России (ежемесячно)](reports/2024-10 ЦЦИ Газ.pdf)
+- экспортные цены на трубопроводный и сниженный газ (ежемесячно), ставки фрахта СПГ (ежемесячно) – [аналитика](reports/2024-10%20ЦЦИ%20Газ.pdf) и котировки; 
+- [большой квартальный отчет](reports/2024-02%20PBC%20Quarterly%20Gas.pdf) о рынке газа и влияющих отраслях; 
+- добыча, экспорт, цены (ежеквартально) - [консенсус-прогноз](reports/2024-02%20PBC%20Quarterly%20Gas%20Consensus.pdf)
 
-[Опрос профессиональных аналитиков: Газ (ежеквартально)](reports/2024-02%20PBC%20Quarterly%20Gas%20Consensus.pdf)
-
-[Обзор зарубежных рынков газа (ежеквартально)](reports/2024-02%20PBC%20Quarterly%20Gas.pdf)
-
-### Морской фрахт
-
-[Перевозки нефти. Ставки фрахта (еженедельно)](/reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf)
-
-[Перевозки нефтепродуктов. Ставки фрахта (еженедельно)](/reports/2024-07-17%20PBC%20Weekly%20OilProduct%20Freight.pdf)
-
-[Перевозки зерна. Ставки фрахта (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf)
-
-[Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
-
-[Морская контейнерная логистика (ежемесячно)](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf)
-
-[Морская контейнерная логистика - флот (ежемесячно)](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf)
 
 ### Российское растениеводство
 
-[Экспортные цены на пшеницу (еженедельно)](reports/2024-07-12%20ЦЦИ%20Пшеница.pdf)
-
-[Подсолнечное масло (ежемесячно)](reports/2024-07%20ЦЦИ%20Подсолнечное%20масло.pdf)
-
-[Перевозки зерна. Ставки фрахта (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf)
-
-[Опрос профессиональных аналитиков: АПК](reports/2024-02%20GPB%20Quarterly%20Agro%20Consensus.pdf)
+-	экспортные цены на пшеницу и нетбэки (еженедельно) - [аналитика и котировки](reports/2024-07-12%20ЦЦИ%20Пшеница.pdf);
+-	подсолнечное масло (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20Подсолнечное%20масло.pdf);
+-	фрахт зерна (еженедельно) - [аналитика и котировки](reports/2024-07-15%20ЦЦИ%20Фрахт%20зерновых.pdf); 
+-	ставки перевалки зерна (раз в полгода) – аналитика и котировки; 
+-	большой полугодовой отчет о рынке – аналитика и вебинар ([пример](https://pbc-index.ru/events/2024-09-13-wheat.html));
+-	урожай, экспорт зерновых и масличных (ежеквартально) – [консенсус-прогноз](reports/2024-02%20GPB%20Quarterly%20Agro%20Consensus.pdf).
 
 ### Российская сухопутная логистика
 
-[Сухопутная логистика. Полувагоны](reports/2024-06%20PBC%20Monthly%20Logistics.%20Open%20wagons.pdf)
+-	ставки на полувагоны (ежемесячно) - [аналитика и котировки](reports/2024-06%20ЦЦИ%20Полувагоны.pdf); 
+-	фитинговые платформы и контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20ЖД%20контейнеры.pdf); 
+-	[нетбэки на уголь (ежеквартально)](reports/2024-09 PBC Quarterly Coal NB.pdf); 
+-	ставки перевалки угля, зерна, нефтеналивных грузов, контейнеров (раз в полгода) – аналитика и котировки; 
+-	ставки на склады (ежеквартально) - [консенсус-прогноз](reports/2024-02%20PBC%20Office%20and%20Warehouse%20Quarterly%20Consensus.pdf)
 
-[Сухопутная контейнерная логистика](reports/2024-07%20PBC%20Monthly%20Logistics.%20Flat%20wagons.pdf)
+### Российская морская логистика
 
-[Опрос профессиональных аналитиков:коммерческая недвижимость](reports/2024-02%20PBC%20Office%20and%20Warehouse%20Quarterly%20Consensus.pdf)
+-	[ставки фрахта на нефть (еженедельно)](reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf), [нефтепродукты (еженедельно)](reports/2024-07-17 PBC Weekly OilProduct Freight.pdf), [зерно (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf), [уголь (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf), контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf); 
+-	[цены на контейнеровозы (ежемесячно)](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf); 
+-	ставки перевалки нефтеналивных грузов, угля, зерна, контейнеров (раз в полгода) - аналитика и котировки.
 
-### Азотные удобрения
+### Российские контейнеры
 
-[Азотные удобрения (еженедельно)](reports/2024-10-07%20ЦЦИ%20Азотные%20удобрения.pdf)
+-	ставки на фитинговые платформы и контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20ЖД%20контейнеры.pdf); 
+-	ставки фрахта контейнеров (ежемесячно) - [аналитика и котировки](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf); 
+-	цены на контейнеровозы (ежемесячно) - [аналитика и котировки](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf); 
+-	ставки перевалки контейнеров (раз в полгода) - аналитика и котировки.
 
-### Химия
+### Российские удобрения
 
-[Цены на метанол в России (ежемесячно)](reports/2024-06%20PBC%20Monthly%20Methanol.pdf)
+-	экспортные цены на азотные удобрения (еженедельно) – [аналитика и котировки](reports/2024-11-25%20ЦЦИ%20Азотные%20удобрения.pdf);
+-	большой квартальный отчет о рынке газа и удобрениях и вэбинар ([пример](https://www.youtube.com/@CCI.Friday));
+-	производство, экспорт, цены (ежеквартально) - консенсус-прогноз.
 
-[Цены на ароматические углеводороды и их производные в России (еженедельно)](reports/2024-07-18%20PBC%20Weekly%20Aromatics.pdf)
+### Российские метанол и ароматика
+
+-	внутренние цены на метанол, цены на метанол в Китае, ставки фрахта на перевозку российского метанола (ежемесячно) – [аналитика и котировки](reports/2024-11%20PBC%20Monthly%20Methanol.pdf); 
+-	внутренние цены на стирол, бензол (еженедельно) – [аналитика и котировки](reports/2024-07-18%20PBC%20Weekly%20Aromatics.pdf);
+-	внутренние цены на каустическую соду (ежемесячно) – аналитика и котировки.
+
