--- a/forecasts/forecast-fertilizers.qmd
+++ b/forecasts/forecast-fertilizers.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: август 2024 г.
+## Результаты опроса: декабрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -43,11 +43,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-Экспертами были пересмотрены цены на карбамид в конце 2024 (+3%) и 2025 (+4%) г. относительно прошлого консенсуса. Причиной является пересмотр цен на природный газ в сторону увеличения, который может быть связан с увеличением потребления природного газа в странах Азии по причине аномальной жары.
+Цены на приллированный карбамид были пересмотрены в меньшую сторону на 4 квартал 2024 г. и 1 квартал 2025 г. Снижение позитивных ожиданий произошло на фоне невысокой активности основных мировых импортёров.
 
-Прогноз производства и экспорта хлористого калия на 2024 и 2025 г. был пересмотрен аналитиками в сторону увеличения. Производство в 2024 и 2025 г согласно прогнозу вырастет на 6 и 7% соответственно, экспорт на 25 и 23 %. Это связано с планами Уралхима и Еврохима по увеличению своих калийных мощностей. Прогноз увеличения экспорта связан с наращиванием присутствия компаний в Китае, Индии и Бразилии.
+Цены на фосфоросодержащие удобрения были пересмотрены аналитиками в большую сторону на всём протяжении горизонта прогнозирования. Основным фактором повышения цен является ожидаемое снижение предложения МАФ на глобальном рынке в связи с введенными ограничительными мерами на экспорт китайского продукта, а также быстрорастущим спросом на фосфорную кислоту со стороны производителей аккумуляторов.
 
-В связи с увеличением экспортного предложения хлорида калия на мировом рынке, аналитики пересмотрели уровень цен на хлористый калий в 2024 (-6%) и 2025 г (-4%).
+Ключевой причиной снижения прогнозов цен на калийные удобрения является усиление конкуренции внутри калийной отрасли.
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
@@ -77,7 +77,7 @@ df_range$date <- as.Date(df_range$date)
 
 hc <- highchart() %>% 
    hc_xAxis(type = "datetime") %>%
-   hc_yAxis(title  = list(text = 'долл./т'), max = 450, min = 200) %>% 
+   hc_yAxis(title  = list(text = 'долл./т'), max = 350, min = 250) %>% 
    hc_plotOptions(area = list(stacking = 'normal')) %>%
    hc_add_series(df_range, hcaes(x = date, y = round(value,2), group = X1), type = 'area', color = c('#d1e5ff','#ffffff')) %>%
    hc_add_series(df_last, type="line", hcaes(x = date, y = round(value,2), group=index), color = "#1A4AFC", dataLabels = TRUE) %>%
@@ -95,12 +95,12 @@ hc
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
 ## Список участников
 
-В опросе приняли участие 5 профессиональных аналитиков, 3 из них дали согласие на раскрытие информации об их участии в опросе:
+В опросе приняли участие 6 профессиональных аналитиков, 4 из них дали согласие на раскрытие информации об их участии в опросе:
 
 | <!-- --> | <!-- --> | <!-- --> |
 |------------------------|--------------------------|----------------------|
-| Адамова Нина (Газпромбанк) | Лебедской-Тамбиев Артем (Аналитический центр ТЭК) | Попова Евгения (Имплемента) |
-|  | *2 участника не подтвердили согласие на раскрытие данных* |  |
+| Адамова Нина (Газпромбанк) | Дегтярева Елизавета (Альфа-банк) | Лебедской-Тамбиев Артем (Аналитический центр ТЭК) |
+| Попова Евгения (Имплемента) | *2 участника не подтвердили согласие на раскрытие данных* |  |
 :::
 
 :::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
