--- a/forecasts/forecast-fx.qmd
+++ b/forecasts/forecast-fx.qmd
@@ -17,7 +17,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-10 .g-col-md-6 .g-col-lg-6}
-## Результаты опроса: октябрь 2024 г.
+## Результаты опроса: ноябрь 2024 г.
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 library(kableExtra)
@@ -42,11 +42,11 @@ df %>%
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
 ## Основные наблюдения
 
-После заседания Банка России 25 октября и обновленного прогноза регулятора ожидания консенсуса изменились в пользу повышения ставки до 22% в пике цикла. Распространены и альтернативные варианты (21% - 2 из 13 аналитиков и 23% - 3 из 13 аналитиков). Темпы снижения ключевой ставки остаются неизменными  -6 п.п. к концу 2025 г.
+Резкое ослабление курса рубля 22.11-27.11 (после введения новых внешних ограничений на финансовый сектор РФ) привело к пересмотру «вверх» ожиданий аналитиков по валютному курсу на 2025 г. до 100-105 руб./долл. Этот уровень все равно ниже текущего курса в 109 руб./долл., рубль временно слабее своих фундаментальных значений, определяемых по ценам на сырьевые экспортные товары РФ [подробнее](https://pbc-index.ru/pbc-index.html).
 
-Ожидания по инфляции продолжают сдвигаться «вверх», цель в 4% не будет достигнута в 2025 г. (консенсус – 5,5%).
+Новые данные по инфляции предполагают, что инфляция по итогам 2024 г. может превысить прогноз Банка России. Ожидания консенсуса – 8,8% г/г (8-8,5% ЦБ) на конец 2024 г., 6% г/г (4,5-5% ЦБ) - на конец 2025 г.
 
-Ослабление курса рубля до 95-97 руб./долл. ранее было заложено в ожидания консенсуса в 1 кв. 2025 г., но реализовалось раньше – в октябре 2024 г. Дальнейшее ослабление курса рубля предполагается более умеренным.
+Превышение прогноза по инфляции и возможные проинфляционные эффекты от ослабления курса рубля вероятно стали факторами для пересмотра ожиданий аналитиков по траектории ключевой ставки Банка России. На заседании в декабре ключевая ставка может быть повышена до 23% (8 из 10 аналитиков) (22% в результатах опроса в октябре).
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-5 .g-col-md-6 .g-col-lg-6}
