--- a/markets/markets-chemicals.qmd
+++ b/markets/markets-chemicals.qmd
@@ -11,7 +11,7 @@ format:
 
 # ![](../images/icon-chemicals2.svg) Химия {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -33,6 +33,7 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
+
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Индекс цен на метанол на российском рынке (CPT Москва)
 
@@ -64,7 +65,6 @@ hc
 
 ```
 :::
-
 :::
 
 ### Методология
