--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -10,35 +10,36 @@ format:
 
 # ![](../images/icon-oil.svg) Нефть {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
 ::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*20.11.2024 Нефть*
+*18.12.2024 Нефть*
 
-**Дисконт ESPO бьет рекорды 2024 г.**
+**Россия укрепляет позиции на азиатском рынке**
 
-По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals и ESPO снизилась более чем на 3% н/н.
+По итогам предыдущей недели стоимость российской нефти варьировалась в зависимости от сорта и базиса поставки. Дельта изменения находится в пределах от -1% до +1%. 
 
-Дисконт на ESPO FOB Kozmino сузился более чем на 6% н/н и обновил минимальное значение за текущий год.
+Дисконт на ESPO FOB Kozmino сузился более чем на 10% на фоне роста спроса в Китае.
 
-Морской экспорт российской нефти за отчетную неделю уменьшился на 23% н/н на фоне выхода с ремонтных работ ряда нефтеперерабатывающих заводов.
+Морской экспорт российской нефти за отчетную неделю увеличился более чем на 7% н/н.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*04.12.2024 Нефть*
+
+**«Дружба» приходит в Сербию**
+
+По итогам предыдущей недели стоимость российской нефти варьировалась в зависимости от сорта и базиса поставки. Дельта изменения находится в пределах от -1% до +1%.
+
+Дисконты на Urals FOB Novorossiysk и Urals FOB Primorsk сузились более чем на 3% н/н в условиях повышенного спроса со стороны покупателей из-за низких показателей экспорта в одноименных портах в последние 2-3 недели.
+
+Морской экспорт российской нефти за ноябрь 2024 г. снизился более чем на 6% м/м.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*13.11.2024 Нефть*
-
-**Дисконт ESPO упал до минимумов 2024 г. вслед за Urals**
-
-По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals увеличились более чем на 4,0% н/н, цена на ESPO выросла более чем на 2,0% н/н.
-
-Дисконт на ESPO FOB Kozmino сузился на 15,8% и обновил минимальное значение за текущий год.
-
-Морской экспорт российской нефти за отчетную неделю увеличился на 15,8% на фоне возобновившихся поставок из порта "Новороссийск".
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -55,7 +56,8 @@ df$date <- as.Date(df$date, origin = "1899-12-30")
 hc = highchart() %>% 
    hc_add_series(df, type = "line", hcaes(x = date, y = value), 
                  color = c("#1A4AFC"), 
-                 name = c("Индекс цен на нефть")) %>% 
+                 name = c("Индекс цен на нефть"),
+                 marker = list(enabled = FALSE)) %>% 
    hc_xAxis(type = 'datetime') %>% 
    hc_yAxis(title  = list(text = 'янв. 2022 = 100')) %>% 
    hc_exporting(enabled = FALSE) %>% 
