--- a/markets/markets-sea-container-ports.qmd
+++ b/markets/markets-sea-container-ports.qmd
@@ -11,9 +11,9 @@ format:
 
 # ![](../images/icon-barcode.svg)Морские порты. Контейнеры {.my-custom-class style="margin-left:3%;"}
 
-![](../images/icon-subscription.svg)[Демо-подписка](../demo-subscription.qmd)
+![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
-::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
@@ -30,11 +30,9 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Объём перевалки контейнеров по бассейнам за 9 мес. 2024 г., тыс. ДФЭ
 
 ![](../fig/2024-11-Container-Map-Final.SVG){width="100%"}
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -44,4 +42,4 @@ format:
 
 [Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
 :::
-:::::
+:::
